--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="http://s.codepen.io/assets/reset/normalize.css">
     <link href="http://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet" type="text/css">
     <link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
-    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>-->
   </head>
-  <body>
-    <section id="mainApp" class="ng-scope">
+  <body ng-app="respTodo">
+    <section id="mainApp" ng-controller="TodoCtrl">
       <header>
         <a href="#" class="go-to-nav">
           <img src="http://files.danbowles.com/assets/svg/hamburger-icon.svg">
@@ -25,34 +24,23 @@
         <h1 class="list-title">to do list</h1>
       </header>
       <div class="list-content">
-        <section class="ng-scope">
-          <h3><span class="ng-binding">Must Do No Matter What</span></h3>
-          <h5 class="ng-scope">completed?</h5>
+        <section ng-repeat="category in categories">
+          <h3><span>{{category.text}}</span></h3>
+          <h5 ng-if="$first">completed?</h5>
           <ol>
-            <li class="ng-scope">
-              <span class="ng-binding">Take out garbage</span>
+            <li ng-repeat="task in category.tasks">
+              <span>{{task.title}}</span>
               <div class="done-checkbox">
-                <input type="checkbox" id="todo-00" class="ng-pristine ng-valid">
-                <label for="todo-00"></label>
-              </div>
-            </li>
-            <li class="ng-scope">
-              <span class="ng-binding">random letters</span>
-              <div class="done-checkbox">
-                <input type="checkbox" id="todo-01" class="ng-pristine ng-valid">
-                <label for="todo-01"></label>
-              </div>
-            </li>
-            <li class="ng-scope">
-              <span class="ng-binding">words and such</span>
-              <div class="done-checkbox">
-                <input type="checkbox" id="todo-02" class="ng-pristine ng-valid">
-                <label for="todo-02"></label>
+                <input type="checkbox" ng-model="task.isDone" id="todo-{{$parent.$index}}{{$index}}"/>
+                <label for="todo-{{$parent.$index}}{{$index}}"></label>
               </div>
             </li>
           </ol>
         </section>
       </div>
     </section>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
